--- a/package.json
+++ b/package.json
@@ -4,13 +4,15 @@
   "description": "school something",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "nodemon app"
   },
   "author": "stech and abraham",
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.20.0",
     "cloudinary": "^1.32.0",
+    "dotenv": "^16.0.2",
     "ejs": "^3.1.8",
     "express": "^4.18.1",
     "express-fileupload": "^1.4.0",
