--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "stech and abraham",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.0.1",
     "body-parser": "^1.20.0",
     "cloudinary": "^1.32.0",
     "dotenv": "^16.0.2",
