--- a/.env
+++ b/.env
@@ -5,3 +5,9 @@ api_secret='d7lpvzOQEgaO5t9S1ld22Vh0srE'
 profileFolder = 'lincolnPortal/profilePhoto/'
 coursebook = 'lincolnPortal/courses/books/'
 courseVideo = 'lincolnPortal/courses/Video/'
+
+
+# session
+secret= 'f0fc577c47af31b7a130995e63a74d1c'
+
+mongolink= 'mongodb+srv://stech:test123@onlinschool.ccpc5hk.mongodb.net/?retryWrites=true&w=majority'
