--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "mongoose": "^6.6.2",
     "morgan": "^1.10.0",
     "nodemailer": "^6.7.8",
-    "nodemon": "^2.0.20"
+    "nodemon": "^2.0.20",
+    "rand-token": "^1.0.1"
   }
 }
