--- a/.env
+++ b/.env
@@ -11,3 +11,14 @@ courseVideo = 'lincolnPortal/courses/Video/'
 secret= 'f0fc577c47af31b7a130995e63a74d1c'
 
 mongolink= 'mongodb+srv://stech:test123@onlinschool.ccpc5hk.mongodb.net/?retryWrites=true&w=majority'
+
+
+
+# email
+email='viewwid.solutech@solutech-portfolio.herokuapp.com'
+pass='Xerewgida1$'
+service='Zoho'
+host ='smtp.zoho.com'
+
+schoolName= 'Lincoln college portal'
+address = 'plot so so so
