--- a/.env
+++ b/.env
@@ -21,4 +21,6 @@ service='Zoho'
 host ='smtp.zoho.com'
 
 schoolName= 'Lincoln college portal'
-address = 'plot so so so
+address = 'plot so so so'
+
+website='http://localhost:3000'
