--- a/.env
+++ b/.env
@@ -24,3 +24,9 @@ schoolName= 'Lincoln college portal'
 address = 'plot so so so'
 
 website='http://localhost:3000'
+
+
+# lincoln 
+admin='lincoln'
+# tester
+pass= 'odetest123'
