--- a/.env
+++ b/.env
@@ -5,7 +5,7 @@ api_secret='d7lpvzOQEgaO5t9S1ld22Vh0srE'
 profileFolder = 'lincolnPortal/profilePhoto/'
 coursebook = 'lincolnPortal/courses/books/'
 courseVideo = 'lincolnPortal/courses/Video/'
-recieptfile = ''
+recieptfile = 'lincolnPortal/courses/reciept/'
 
 # session
 secret= 'f0fc577c47af31b7a130995e63a74d1c'
