--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "express-session": "^1.17.3",
     "mongoose": "^6.6.2",
     "morgan": "^1.10.0",
+    "node-url-shortener": "^2.0.3",
     "nodemailer": "^6.7.8",
     "nodemon": "^2.0.20",
     "rand-token": "^1.0.1"
