--- a/.env
+++ b/.env
@@ -16,7 +16,7 @@ mongolink= 'mongodb+srv://stech:test123@onlinschool.ccpc5hk.mongodb.net/?retryWr
 
 # email
 email='viewwid.solutech@solutech-portfolio.herokuapp.com'
-pass='Test12345$'
+pass='Tester12345$'
 service='Zoho'
 host ='smtp.zoho.com'
 
