--- a/.env
+++ b/.env
@@ -15,8 +15,8 @@ mongolink= 'mongodb+srv://stech:test123@onlinschool.ccpc5hk.mongodb.net/?retryWr
 
 
 # email
-email='viewwid.solutech@solutech-portfolio.herokuapp.com'
-pass='Tester12345$'
+email='edv.blog@solutech-portfolio.herokuapp.com'
+pass='Test$'
 service='Zoho'
 host ='smtp.zoho.com'
 
