--- a/.env
+++ b/.env
@@ -16,7 +16,7 @@ mongolink= 'mongodb+srv://stech:test123@onlinschool.ccpc5hk.mongodb.net/?retryWr
 
 # email
 email='edv.blog@solutech-portfolio.herokuapp.com'
-pass='Test$'
+pass='Test123$$'
 service='Zoho'
 host ='smtp.zoho.com'
 
