--- a/.env
+++ b/.env
@@ -15,7 +15,7 @@ mongolink= 'mongodb+srv://stech:test123@onlinschool.ccpc5hk.mongodb.net/?retryWr
 
 
 # email
-email='edv.blog@solutech-portfolio.herokuapp.com'
+email='adv.blog@solutech-portfolio.herokuapp.com'
 pass='Test123$$'
 service='Zoho'
 host ='smtp.zoho.com'
