--- a/package.json
+++ b/package.json
@@ -5,11 +5,13 @@
   "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon app"
+    "start": "nodemon app",
+    "build": "postcss public/css/tailwind.css -o dist/output.css"
   },
-  "author": "stech and abraham",
+  "author": "stech and abraham and amaka",
   "license": "ISC",
   "dependencies": {
+    "autoprefixer": "^10.4.12",
     "bcrypt": "^5.0.1",
     "body-parser": "^1.20.0",
     "cloudinary": "^1.32.0",
@@ -22,6 +24,9 @@
     "morgan": "^1.10.0",
     "nodemailer": "^6.7.8",
     "nodemon": "^2.0.20",
-    "rand-token": "^1.0.1"
+    "postcss": "^8.4.17",
+    "postcss-cli": "^10.0.0",
+    "rand-token": "^1.0.1",
+    "tailwindcss": "^3.1.8"
   }
 }
