--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "author": "stech and abraham and amaka",
   "license": "ISC",
   "dependencies": {
+    "alert": "^5.1.1",
     "autoprefixer": "^10.4.12",
     "bcrypt": "^5.0.1",
     "body-parser": "^1.20.0",
@@ -22,6 +23,7 @@
     "express-session": "^1.17.3",
     "mongoose": "^6.6.2",
     "morgan": "^1.10.0",
+    "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.7.8",
     "nodemon": "^2.0.20",
     "postcss": "^8.4.17",
