--- a/.env
+++ b/.env
@@ -32,6 +32,6 @@ website='http://localhost:3000'
 
 
 # lincoln 
-admin='lincoln'
+admin='lincoln@gmail.com'
 # tester
-password= 'odetest123'
+password= 'meAndyOu'
