--- a/.env
+++ b/.env
@@ -31,7 +31,6 @@ acctName=' skalajhs '
 website='http://localhost:3000'
 
 
-# lincoln 
+# lincoln Admin
 admin='lincoln@gmail.com'
-# tester
 password= 'meAndyOu'
