--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
   "description": "school something",
   "main": "app.js",
   "scripts": {
+    "tailwind:css": "postcss public/styles/tailwind.css -o public/styles/style.css",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon app",
+    "start": "npm run tailwind:css && nodemon app",
     "build": "postcss public/css/tailwind.css -o dist/output.css"
   },
   "author": "stech and abraham and amaka",
