--- a/.env
+++ b/.env
@@ -18,7 +18,7 @@ mongolink= 'mongodb+srv://stech:test123@onlinschool.ccpc5hk.mongodb.net/?retryWr
 email='adv.blog@solutech-portfolio.herokuapp.com'
 pass='Test123$$'
 service='Zoho'
-host ='smtp.zoho.com'
+host ='smtppro.zoho.in'
 
 # school
 schoolName= 'Lincoln college portal'
